# Open3DBroadcast

./: .gitignore  .gitmodules  AGENTS.md  AUDIO_SYNC_DEVELOPMENT_PLAN.md  AUDIO_SYNC_GITHUB_ISSUE_TEMPLATES.md  AUDIO_SYNC_PLANNING_SUMMARY.md  AUDIO_SYNC_README.md  AUDIO_TRACK_IMPLEMENTATION_PLAN.md  BUILD_AND_DEPLOYMENT_COMPLETE.md  BUILD_WEBRTC_LIBS.md  CHANGELOG.md  CI_CD_TESTING_STATUS.md  CI_WORKFLOW_TEST_RESULTS.md  CMakeLists.txt  CREATE_M0_ISSUES_README.md  DEVELOPMENT_GUIDELINES.md  FRAME_SIZE_SUMMARY.txt  IMPLEMENTATION_COMPLETE_PHASE_2.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY.md  ISSUE_11_STATUS.md  ISSUE_13_COMPLETE.md  ISSUE_13_IMPLEMENTATION.md  ISSUE_15_START_HERE.md  ISSUE_M0_1_PROTOCOL_ALIGNMENT.md  ISSUE_WEBRTC_IMPLEMENTATION.md  LIBDATACHANNEL_INTEGRATION.md  LIVEKIT_FFI_CAPABILITY_MAP.md  LIVEKIT_GITHUB_ISSUES.md  LIVEKIT_IMPLEMENTATION_SUMMARY.md  LIVEKIT_QUICKSTART.md  LIVEKIT_README.md  MOCAP_AUDIO_FRAME_SIZE_ANALYSIS.txt  MOQ_PLAN_SUMMARY.txt  MOQ_TRANSPORT_IMPLEMENTATION_PLAN.md  PACKAGING_UPDATE.md  PHASE_4_TEST_SETUP.md  PLANNING_COMPLETE.md  PLUGIN_CAPABILITIES_SANITY_CHECK.md  PRODUCTION_READINESS_JWT_TOKEN_AUTO_FETCH.md  (+34 more)
.claude/: BASELINE_METRICS.txt  CONNECTION_AND_QUEUE_INVESTIGATION.md  CRITICAL_FINDING.md  DIAGNOSIS_PHASE_1.md  FRAME_BATCHING_OPTIMIZATION.md  INDEX.md  LIVEKIT_FFI_BUG_REPORT.md  LIVELINK_QUEUE_DIAGNOSIS.md  LOGGING_OPTIMIZATION_COMPLETE.md  MANUAL_TEST_GUIDE.md  METRICS_ANALYSIS_CRITICAL_FINDING.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SESSION.md  PHASE_12_COMPLETE.md  PHASE_12_CRITICAL_FINDING_NO_PUSH_WARNINGS.md  PHASE_12_NEXT_STEPS.md  PHASE_12_QUICK_START.md  PHASE_12_SUMMARY.md  PHASE_12_TIMING_INSTRUMENTATION.md  PHASE_1_3_TEST_INSTRUCTIONS.md  PHASE_2_NNG_STARTUP_OPTIMIZATION.md  ROOT_CAUSE_ANALYSIS.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  WEBRTC_DIAGNOSTIC_PLAN.md  WEBRTC_PERFORMANCE_GUIDE.md  claude.md  settings.local.json
.github/: copilot-instructions.md
.github/actions/build-plugin-core/: action.yml
.github/agents/: CodingAgent.md  code-debug-agent.md  code-review-agent.md  coding-agent.md  planning-agent.md  product-manager-agent.md  qa-engineer-agent.md
.github/agents/reference/: README.md  handoff-guide.md  plan-template.md  research-checklist.md  task-template.md
.github/workflows/: CI_CD_INFRASTRUCTURE_COMPLETE.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  build-libdatachannel.yml  build-o3ds-core.yml  build-webrtc.yml  create-webrtc-audio-issues.yml  linux.yml  o3ds-webrtc-windows-native.yaml  open-ue-editor.yml  open3dbroadcast-plugin-ci.yml  open3dbroadcast-plugin-nightly.yml  open3dbroadcast-plugin-release.yml  open3dbroadcast-plugin-test.yml  repeater-image.yml  ue-quick-dev.yml  unreal-plugin-agent-ci.yml  unreal-plugin-ci.yml  unreal-plugin-nightly.yml  unreal-plugin-release.yml  windows.yml
.github/workflows/steps/: junction-plugin-into-host.ps1
LiveKit/: Caddyfile  README.md  docker-compose.yml  gen-token.mjs  livekit.yaml
ProjectSandbox/: .gitignore  .ignore  ProjectSandbox.code-workspace  ProjectSandbox.uproject  README.md
ProjectSandbox/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  UserEditor.ini
ProjectSandbox/Content/: ABP_LiveLink.uasset  BP_BroadcastTest.uasset  BP_ReceiverTest.uasset  BroadcasterTest.umap  LiveKitTest.uasset  Mocap_Maamawi_Dance_Repeater.uasset  NewSoundSubmix.uasset  NewWebRTCTestMap.umap  NewWebRTCTestMapTwo.umap  ReceiverTest.umap  TCPTest.uasset  TestMap.umap  WebRTCTest.uasset  WebRTCTestMap.umap
ProjectSandbox/Content/LevelPrototyping/Meshes/: SM_ChamferCube.uasset  SM_Cylinder.uasset  SM_QuarterCylinder.uasset
ProjectSandbox/Content/ThirdPerson/: MI_ThirdPersonColWay.uasset
ProjectSandbox/Plugins/Open3DBroadcast/: Open3DBroadcast.uplugin  README.md  Transport_Module_Comparison.md  USER_GUIDE.md
ProjectSandbox/Source/: ProjectSandbox.Target.cs  ProjectSandboxEditor.Target.cs
ProjectSandbox/Source/ProjectSandbox/: DoNothing.cpp  DoNothing.h  ProjectSandbox.Build.cs  ProjectSandbox.cpp
ProjectSandbox/docs/: Transport_Module_Reorg_Refactor.md
Tests/Gauntlet/: Open3DStreamTests.json  README.md
apps/Repeater/: main.cpp
apps/RepeaterSmokePush/: CMakeLists.txt  main.cpp
apps/RepeaterSmokePushDocker/: repeater_smoke_push.c
apps/Test1/: main.cpp
build_quick/: CMakeCache.txt
build_webrtc/: CMakeCache.txt
cloud-init/: cloud-init-repeater.yaml
compose/: docker-compose.yml
docker/: Dockerfile.repeater
docs/: CHANGELOG.md  README_LiveKit.md  livekit_ffi_feature_request.md
docs/product-management/: README.md  competitive-analysis-matrix-2024.md  entertainment-focus.md  frameworks.md  go-to-market-strategy-2024.md  market-research-report-2024.md  market-research-report-2025.md  metrics-and-planning.md  product-roadmap-recommendations-2024.md  product-roadmap-recommendations-2025.md  research-methodology.md  templates.md
examples/: README.md  package-lock.json  signaling-server.js
plugins/mobu/: layout.cpp
plugins/unreal/Open3DBroadcast/: Open3DBroadcast.uplugin  README.md
plugins/unreal/Open3DStream/: Agents.md  BuildConfig.txt  Open3DBroadcast_Planning.md  Open3DStream.uplugin  README.md  push_lib.bat
plugins/unreal/Open3DStream/docs/: BROADCAST_CURVE_CAPTURE.md  BROADCAST_PROTOCOL_REFERENCE.md  BROADCAST_TRANSFORM_TIMING.md  BROADCAST_TRANSPORT_GUIDE.md  BROADCAST_WEBRTC_USER_GUIDE.md  BUILD_WEBRTC_LIBS.md  BroadcastSerialization.md  CURVE_SUPPORT.md  ENHANCEMENT_SUMMARY.md  ISSUE_11_STATUS.md  ISSUE_13_IMPLEMENTATION.md  ISSUE_15_CHECKLIST.md  ISSUE_15_IMPLEMENTATION_SUMMARY.md  ISSUE_15_WORK_SUMMARY.md  ISSUE_8_IMPLEMENTATION.md  ISSUE_M0.1.md  ISSUE_M0_2_CURVE_SEMANTICS.md  (+28 more)
python/: signaling_server.py
scripts/: README_AUDIO_SYNC.md  create_audio_sync_issues.sh  create_webrtc_audio_issues.py  test_package_layout.py
scripts/agent/: poll-steer.sh
src/: CMakeLists.txt  o3ds.fbs  o3ds_generated.h
src/o3ds/: model.cpp  model.h  o3ds.cpp  o3ds.h  o3ds_version.h  webrtc_connector.cpp  webrtc_connector.h
test/: tx_seq_tests.cpp
(+437 files in other folders)
